# SimpleMath

./: .gitignore  Cargo.toml  README.md  Readme.md  criterion.toml  index.html  netlify.toml  package.json
.github/workflows/: rust.yml
projects/sm-algorithm/: Cargo.toml  Readme.md
projects/sm-algorithm/benches/: prime_sum.rs
projects/sm-algorithm/src/: error.rs  lib.rs  result.rs
projects/sm-algorithm/src/basic/: mod.rs
projects/sm-algorithm/src/cache/: mod.rs  traits.rs
projects/sm-algorithm/src/combinatoric/: mod.rs
projects/sm-algorithm/src/gamma/: binomial.rs  factorial.rs  factorial2.rs  mod.rs
projects/sm-algorithm/src/linear/: fibonacci.rs  mod.rs
projects/sm-algorithm/src/prime/: mod.rs  prime_count.rs  prime_sum.rs  twin_prime.rs
projects/sm-ast/: Cargo.toml  Readme.md
projects/sm-ast/src/: ast.rs  lib.rs
projects/sm-ast/src/ast/: mod.rs  traits.rs
projects/sm-ast/src/error/: mod.rs  traits.rs
projects/sm-ast/src/evaluate/: context.rs  forward.rs  mod.rs  rewrite.rs  traits.rs
projects/sm-ast/src/evaluate/utils/: check_attributes.rs  mod.rs  traits.rs
projects/sm-ast/src/internal/: container.rs  dict_like.rs  elementary.rs  expr_like.rs  list_like.rs  mod.rs  number_like.rs  number_theory.rs  tests.rs
projects/sm-ast/src/internal/container/: mod.rs
projects/sm-ast/src/internal/elementary/: mod.rs  trigonometric.rs  utils.rs
projects/sm-ast/src/internal/random/: mod.rs
projects/sm-ast/src/parser/: mod.rs  ops.rs  parse.rs  traits.rs  utils.rs
projects/sm-ast/src/traits/: mod.rs
projects/sm-ast/src/traits/tex/: mod.rs  readme.md  symbol_map.rs  utils.rs
projects/sm-ast/src/traits/wolfram/: mod.rs  symbol_map.rs
projects/sm-ast/tests/: main.rs
projects/sm-ast/tests/display/: mod.rs
projects/sm-ast/tests/parsed/: call.rs  literal.rs  mod.rs
projects/sm-ast/tests/tex/: mod.rs
projects/sm-ast/tests/tex_form/: mod.rs
projects/sm-ast/tests/wolfram/: call.rs  literal.rs  ops.rs
projects/sm-book/: Readme.md  book.toml  package.json
projects/sm-book/docs/: readme.md
projects/sm-book/docs/.vuepress/: config.js
projects/sm-book/docs/.vuepress/public/: sm.tmLanguage.json
projects/sm-book/docs/cn/: readme.md
projects/sm-book/docs/cn/advance/: external.md
projects/sm-book/docs/cn/basic/: control.md  function.md  lambda.md  literal.md  operators.md  precedence.md  questions.md  readme.md  scope.md  shortcoming.md
projects/sm-book/docs/cn/developer/: operators.md  shortcoming.md
projects/sm-book/docs/cn/implement/: readme.md
projects/sm-book/docs/cn/starter/: function.md  repl.md
projects/sm-book/src/: Summary.md  chapter_1.md
projects/sm-parser/: Cargo.toml  Readme.md  rustfmt.toml  simple-math.pest
projects/sm-parser/src/: lib.rs  pre_build.rs  sm_parser.rs
projects/sm-playground/: Cargo.toml  License.md  index.html
projects/sm-playground/src/: lib.rs
projects/sm-playground/tests/: main.rs
projects/sm-std/src/: basic.sm
projects/sm-std/src/constant/: _.sm
projects/sm-std/src/constants/: infinity.sm
projects/sm-std/src/functions/: elementary.sm
projects/sm-std/src/traits/: _.sm
projects/sm-std/src/types/: _.sm  integer.sm
projects/sm-wrapper/: Cargo.toml  simple-math.pest
projects/sm-wrapper/src/: fib.rs
projects/sm-wrapper/tests/: basic.sm
src/: lib.rs
