[package]
name = "sm_algorithm"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration Parser via Pest"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/Moe-Net/arc-rs"
exclude = ["/tests/*"]
edition = "2018"


[dependencies]
num = "0.2"
primal = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "prime_sum"
harness = false