[package]
name = "sm_ast"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
num = "0.2"

[dependencies.wolfram_wxf]
version = "0.3.2"
features = []

[dev-dependencies]

[features]
default = []
