[package]
name = "sm_ast"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
num = "0.2"
bigdecimal = "0.1.2"
text-utils = "0.2.5"
cached = "0.18"
itertools = "0.9"

[dependencies.wolfram_wxf]
version = "0.3.2"
default-features = false
features = []

# [dependencies.derive_more]
# version = "0.99.0"
# default-features = false
# features = ["from", "display"]

[dependencies.sm_parser]
version = "0.1.0"
path = "../sm-parser"
features = []

[dev-dependencies]

[features]
default = []
