[package]
name = "sm_parser"
version = "0.3.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration Parser via Pest"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/Moe-Net/arc-rs"
exclude = ["/tests/*"]
edition = "2018"


[dependencies]
pest = "2.1.2"

[dev-dependencies]
pest_generator = "2.1.2"
quote = "1.0"
