[package]
name = "sm_parser"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration Parser via Pest"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/Moe-Net/arc-rs"
exclude = ["/tests/*"]
edition = "2018"


[dependencies]


[dependencies.pest]
version = "2.1.3"
git = "https://github.com/pest-parser/pest.git"
features = ["const_prec_climber"]


[dev-dependencies]
pest_generator = "2.1.3"
quote = "1.0"
