[package]
name = "sm_wrapper"
version = "0.0.1"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration Parser via Pest"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/Moe-Net/arc-rs"
exclude = ["/tests/*"]
edition = "2018"


[dependencies]
lazy_static = "1.4.0"
num = "0.2"


[dev-dependencies]